change progress bar

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           </div>
           <span class="pull-right">Proficent</span>
           <div class="progress">
-            <div class="progress-bar-65 animation1"></div>
+            <div class="progress-bar-75 animation1"></div>
           </div>
           <div class="tooltip">
             <img class="tech_img" src="/assets/img/CSS.png" alt="Image">
@@ -98,13 +98,13 @@
           </div>
           <span class="pull-right">Proficent</span>
           <div class="progress">
-            <div class="progress-bar-65 animation1"></div>
+            <div class="progress-bar-70 animation1"></div>
           </div>
           <div class="tooltip">
             <img class="tech_img" src="/assets/img/react-js.png" alt="Image">
             <span class="tooltiptext">React</span>
           </div>
-          <span class="pull-right">Familiar</span>
+          <span class="pull-right">Proficent</span>
           <div class="progress">
             <div class="progress-bar-60 animation2"></div>
           </div>
@@ -112,7 +112,7 @@
             <img class="tech_img" src="/assets/img/JavaScript.png" alt="Image">
             <span class="tooltiptext">JavaScript</span>
           </div>
-          <span class="pull-right">Familiar</span>
+          <span class="pull-right">Proficent</span>
           <div class="progress">
             <div class="progress-bar-60  animation2"></div>
           </div>
